fix: dark mode toggle

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,8 +24,8 @@
   --color-text-title-dark: #f5f5f5;
   --color-text-secondary-dark: #9e9e9e;
   --color-text-tertiary-dark: #6d6d6f;
-  --color-selected-background: #3a3a3c;
-  --color-hover-background: #434245;
+  --color-selected-background-dark: #3a3a3c;
+  --color-hover-background-dark: #434245;
 }
 
 html,
